--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
                             <span class="fa-li"><i class="fas fa-bookmark"></i></span>
                             Nudge (Richard H. Thaler & Cass R. Sunstein)
                         </li>
-                         <li>
-                             <span class="fa-li"><i class="fas fa-search-plus"</i></span>
-                             <a href="articles/all-books.html"><u>View all</u></a>
+                        <li>
+                             <span class="fa-li"><a href="articles/all-books.html"><i class="fas fa-search-plus"</i></a></span>
+                             <u>View all</u>
                         </li>
                     </ul>
                 </div>
