--- a/index.html
+++ b/index.html
@@ -327,8 +327,7 @@
                             Nudge (Richard H. Thaler & Cass R. Sunstein)
                         </li>
                         <li>
-                             <span class="fa-li"><a href="articles/all-books.html"><i class="fas fa-search-plus"</i></a></span>
-                             <u>View all</u>
+                            <span class="fa-li"><a href="articles/all-books.html"><u>View all</u><i class="fas fa-search-plus"</i></a></span>
                         </li>
                     </ul>
                 </div>
