--- a/index.html
+++ b/index.html
@@ -263,13 +263,7 @@
             
             <section class="resume-section" id="articles">
                 <div class="resume-section-content">
-                    <!--<h2 class="mb-5">Articles</h2>-->
-                    <div class="subheading mb-3">Computer Science</div>
-                    <ul>
-                        <li><a href="articles/hft-ethics.html"><u>Ethical Implications of High Frequency Trading Algorithms</u></a></li>
-                    </ul>
-                    <br>
-                    <div class="subheading mb-3">Mathematics</div>
+                    <h2 class="mb-5">Articles</h2>
                     <ul>
                         <li><a href="articles/hft-ethics.html"><u>Ethical Implications of High Frequency Trading Algorithms</u></a></li>
                     </ul>
