--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
                     <h2 class="mb-5">Articles</h2>
                     <ul>
                         <li><a href="articles/hft-ethics.html"><u>Ethical Implications of High Frequency Trading Algorithms</u></a></li>
+                        <li><a href="articles/companies-track.html"><u>How Tech Companies Track Users</u></a></li>
                     </ul>
                 </div>
             </section>
