--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
                     <ul>
                         <li><a href="articles/hft-ethics.html"><u>Ethical Implications of High Frequency Trading Algorithms</u></a></li>
                         <li><a href="articles/companies-track.html"><u>How Tech Companies Track Users</u></a></li>
+                        <li><a href="articles/threat-actors.html"><u>Nation State Threat Actors and Advanced Persistent Threats</u></a></li>
                     </ul>
                 </div>
             </section>
