--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
                     <h2 class="mb-5">Articles</h2>
                     <ul>
                         <li><a href="articles/queuing-theory.html"><u>Empirical Analysis of Queuing Theory on Transit Data</u></a></li>
+                        <li><a href="articles/polar-optimization.html"><u>Optimization over Polar Convex Sets and Graphical Methods</u></a></li>
                         <li><a href="articles/hft-ethics.html"><u>Ethical Implications of High Frequency Trading Algorithms</u></a></li>
                         <li><a href="articles/companies-track.html"><u>How Tech Companies Track Users</u></a></li>
                         <li><a href="articles/threat-actors.html"><u>Nation State Threat Actors and Advanced Persistent Threats</u></a></li>
