--- a/projects/veeva-sys.html
+++ b/projects/veeva-sys.html
@@ -33,7 +33,7 @@ algorithms and for storing user information.</li>
 
 <h2>Future Improvements</h2>
 
-<p>Currently, Intellitrack is only able to recognize limited data types from a span of around six months, but we'd prefer to
+<p>Currently, IntelliTrack is only able to recognize limited data types from a span of around six months, but we'd prefer to
 improve it to be able to recognize any enumerable data types over n month timeframes.</p>
 
 <p>The "dashboard" aspect of it was mostly devised as a fun way to give the web application a social media type feel. 
