--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
                     <ul>
-                        <li><a href="projects/veeva-sys.html"><u>IntelliTrack</u></a> &mdash; Uses machine learning to predict future top performing doctor assets based on prescription statistics
+                        <li><a href="projects/veeva-sys.html"><u>IntelliTrack</u></a> &mdash; Uses machine learning to predict future top performing medical assets based on prescription statistics
             (scikit-learn, React, Next, Tailwind, Flask, SQLite)</li>
                     </ul>
                 </div>
