--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             
             <section class="resume-section" id="reading">
                 <div class="resume-section-content">
-                    <!--<h2 class="mb-5">Reading</h2>-->
-                    <div class="subheading mb-3">My Library</div>
+                    <h2 class="mb-5">My Library</h2>
+                    <!--<div class="subheading mb-3">My Library</div>-->
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-laptop-code"></i></span>
