--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                         <li><a href="articles/hft-ethics.html"><u>Ethical Implications of High Frequency Trading Algorithms</u></a></li>
                         <li><a href="articles/companies-track.html"><u>How Tech Companies Track Users</u></a></li>
                         <li><a href="articles/threat-actors.html"><u>Nation State Threat Actors and Advanced Persistent Threats</u></a></li>
+                        <li><span class="fa-li"><i class="fas fa-search-plus"></i></span><a href="articles/all-articles.html"><u>View all</u></a></li>
                     </ul>
                 </div>
             </section>
@@ -133,10 +134,6 @@
                         <li>
                             <span class="fa-li"><i class="far fa-bookmark"></i></span>
                             Outliers (Malcolm Gladwell)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-bookmark"></i></span>
-                            Nudge (Richard H. Thaler & Cass R. Sunstein)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-search-plus"></i></span>
