--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
                     
                     <p class="lead mb-5"><i class="far fa-hand-spock"></i> 
-                        I help researchers and developers leverage technology to drive real business impact. I believe that teamwork and mentorship are critical to a functional org, and that learning happens best through planned action. 
-                        My interests include optimization, embedded systems, and building production ready machine learning models. I studied computer science at Ohio State University and have worked for companies including JPMorgan Chase and Coinbase. 
-                        I will be graduating in May 2023 and am currently searching for new graduate roles in NYC.
+                        I help researchers and developers leverage technology to drive real business impact. I believe that teamwork and mentorship are critical to a functional org, and that learning happens best through planned action.</p>
+                        <p>My interests include optimization, embedded systems, and building production ready machine learning models. I study computer science at Ohio State University and have worked for companies including JPMorgan Chase and Coinbase.</p>
+                        <p>I will be graduating in May 2023 and am currently searching for new graduate roles in NYC.
                     </p>
                     
                     <div class="social-icons">                        
