--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
                     <ul>
+                        <li><a href="projects/treehacks.html"><u>MindScape</u></a> &mdash; A flexible AI-powered educational tool, built to serve our users in any learning goals they have. Catered to their tested learning styles, we parse uploaded materials to teach dynamic lessons
+            (Flask, OpenAI, GPT-3, Whisper, React, Flask, MongoDB, CSS, HTML)</li>
                         <li><a href="projects/veeva-sys.html"><u>IntelliTrack</u></a> &mdash; Uses machine learning to predict future top performing medical assets based on prescription statistics
             (scikit-learn, React, Next, Tailwind, Flask, SQLite)</li>
                     </ul>
