--- a/projects/treehacks.html
+++ b/projects/treehacks.html
@@ -24,7 +24,7 @@
 <h2>Design Process</h2>
 <p>All of our team was well-versed in fullstack development, but with different frameworks, so part of our process was figuring out how to puzzle our skills together.</p>
 <p>This is a picture of our sketches from night 1. From left-to-right, we wrote down what stack we wanted to work with, what API endpoints would be needed, and created general flows for our user experience.</p>
-    
+<p><img src="/static/img/tree1.png"></p>  
 <p>MindScape came out of thoughtful delegation of tasks. Each team member had concrete goals within frontend, backend, and "exploration" (what we're calling the development in AI/NLP-uses of our learning plans). All of these tasks had room for their member to use their own autonomy and creativity. We all gained new technical skills and had a good time!</p>
 
 <h2>Technological Design</h2>
