--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
                     <p class="lead mb-5">
                         I help researchers and developers leverage technology to drive real business impact. I believe that teamwork and mentorship are critical to a functional org, and that learning happens best through planned action.</p>
-                        <p class="lead mb-5"> My interests include optimization, embedded systems, and building production ready machine learning models. I study computer science at Ohio State University and have worked for companies including JPMorgan Chase and Coinbase.</p>
-                        <p class="lead mb-5"> I will be graduating in May 2023 and am currently searching for new graduate roles in NYC.
+                        <p class="lead mb-5"> My interests include optimization, embedded systems, and building production ready machine learning models. I received degrees in CS and Math from Ohio State University in 2023 and have worked for companies including JPMorgan Chase and Coinbase.</p>
+                        <p class="lead mb-5"> I am currently a software engineer at JPMorgan Chase.
                     </p>
                     
                     <div class="social-icons">                        
