--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
                     <ul>
+                        <li><a href="projects/treehacks.html"><u>SmartRecipes</u></a> &mdash; SmartRecipes takes in a list of ingredients from users and displays all possible meals that can be made with those ingredients. Similarity matching is used to show users which meals can be made if other ingredients were to be added, as well as the optimal recipes based on their ingredients on hand. See the GitHub link <a href="https://github.com/blake-whitman/HackKU"><u>here</u></a> for a more detailed description of the project and its functionality.
+            (Flask, Elasticsearch, React, PyMongo, MongoDB, CSS, HTML)</li>
                         <li><a href="projects/treehacks.html"><u>MindScape</u></a> &mdash; A flexible AI-powered educational tool, built to serve our users in any learning goals they have. Catered to their tested learning styles, we parse uploaded materials to teach dynamic lessons
-            (Flask, OpenAI, GPT-3, Whisper, React, Flask, MongoDB, CSS, HTML)</li>
+            (Flask, OpenAI, GPT-3, Whisper, React, MongoDB, CSS, HTML)</li>
                         <li><a href="projects/veeva-sys.html"><u>IntelliTrack</u></a> &mdash; Uses machine learning to predict future top performing medical assets based on prescription statistics
             (scikit-learn, React, Next, Tailwind, Flask, SQLite)</li>
                     </ul>
