--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         (419) 283-8193 ·
                         <a href="mailto:whitman.124@osu.edu"><u>whitman.124@osu.edu</u></a>
                     </div>
-                        <p class="lead mb-5"> My interests include optimization, embedded systems, and building production ready machine learning models. I received degrees in CS and Math from Ohio State University in 2023 and have worked for companies including JPMorgan Chase and Coinbase.</p>
+                        <p class="lead mb-5"> Hi! I am Blake Whitman, and my primary professional interests include optimization, embedded systems, and building production ready machine learning models. I received degrees in CS and Math from Ohio State University in 2023 and have worked for companies including JPMorgan Chase and Coinbase.</p>
                         <p class="lead mb-5"> I am currently a software engineer at JPMorgan Chase.
                     </p>
                     
