--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         (419) 283-8193 ·
-                        <a href="mailto:whitman.124@osu.edu"><u>whitman.124@osu.edu</u></a>
+                        <a href="mailto:blakewhitman5@gmail.com"><u>blakewhitman5@gmail.com</u></a>
                     </div>
                         <p class="lead mb-5"> Hi! I am Blake Whitman–my primary interests include embedded systems, product engineering, quantitative finance, and high frequency trading. I received degrees in CS and Math from Ohio State University in 2023 and have worked for companies including JPMorgan Chase and Coinbase.</p>
                         <p class="lead mb-5"> I am currently a software engineer at JPMorgan Chase.
