--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h2 class="mb-5">Articles</h2>
                     <ul>
                         <li><a href="articles/queuing-theory.html"><u>Empirical Analysis of Queuing Theory on Transit Data</u></a></li>
-                        <li><a href="articles/polar-optimization.html"><u>Polar Convex Programming: A New Paradigm for Nonlinear Optimization</u></a></li>
+                        <li><a href="assets/Polar-Convex.pdf"><u>Polar Convex Programming: A New Paradigm for Nonlinear Optimization</u></a></li>
                         <li><a href="articles/threat-actors.html"><u>Nation State Threat Actors and Advanced Persistent Threats</u></a></li>
                         <li><span class="fa-li"><i class="fas fa-search-plus"></i></span><a href="articles/all-articles.html"><u>View all</u></a></li>
                     </ul>
