--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#articles">Articles</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#reading">Travel</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#reading">Reading</a></li>
                 </ul>
             </div>
@@ -84,6 +85,14 @@
                         <li><a href="articles/threat-actors.html"><u>Nation State Threat Actors and Advanced Persistent Threats</u></a></li>
                         <li><span class="fa-li"><i class="fas fa-search-plus"></i></span><a href="articles/all-articles.html"><u>View all</u></a></li>
                     </ul>
+                </div>
+            </section>
+            <hr class="m-0" />
+
+            <section class="resume-section" id="travel">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Articles</h2>
+                    <iframe src="https://www.google.com/maps/d/embed?mid=13Wl8e8lOnI0YMsDARVnZJLxSr7Y1jN4&ehbc=2E312F" width="640" height="480"></iframe>
                 </div>
             </section>
             <hr class="m-0" />
