--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#articles">Articles</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#reading">Travel</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#travel">Travel</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#reading">Reading</a></li>
                 </ul>
             </div>
@@ -92,7 +92,7 @@
             <section class="resume-section" id="travel">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Articles</h2>
-                    <iframe src="https://www.google.com/maps/d/embed?mid=13Wl8e8lOnI0YMsDARVnZJLxSr7Y1jN4&ehbc=2E312F" width="640" height="480"></iframe>
+                    <iframe src="https://www.google.com/maps/d/embed?mid=13Wl8e8lOnI0YMsDARVnZJLxSr7Y1jN4&ehbc=2E312F" width="1280" height="960"></iframe>
                 </div>
             </section>
             <hr class="m-0" />
