--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
             <section class="resume-section" id="travel">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Articles</h2>
+                    <h2 class="mb-5">Travel</h2>
                     <iframe src="https://www.google.com/maps/d/embed?mid=13Wl8e8lOnI0YMsDARVnZJLxSr7Y1jN4&ehbc=2E312F" width="1280" height="960"></iframe>
                 </div>
             </section>
